# toyCompiler

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
minic/: __init__.py  errors.py
spikes/ctypes_clang/: add_kernel.cpp
tests/: test_errors.py  test_smoke.py  test_spike_ctypes_clang.py
