[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minic"
version = "0.0.0"
description = "A small ML compiler that lowers PyTorch models to optimized C++."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Rudra Kukian", email = "kukianrudra@gmail.com" }]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
include = ["minic*"]
exclude = ["tests*", "bench*", "MDs*", "spikes*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["minic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
